# RunLengthEncoder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
rle/: __init__.py  __main__.py  encoding.py  utils.py
scripts/: checks.py
tests/: test_rle.py
