[tool.poetry]
name = "rle"
version = "0.1.0"
license = "MIT"
description = ""
authors = ["Patrick Tyler Haas <patrick.tyler.haas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.960"
ipython = "^8.3.0"
pre-commit = "^2.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99

[tool.poetry.scripts]
rle = "rle.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
